src/test/resources/ttml/test-suite/pass/dur005-pass.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- See corresponding fail test -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
    <styling>
      <style xml:id="s1" tts:backgroundColor="red" />
    </styling>
    <layout>
      <region xml:id="r1" style="s1" tts:extent="50% 50%" tts:origin="0% 0%"/>
      <region xml:id="r2" style="s1" tts:extent="50% 50%" tts:origin="0% 50%"/>
      <region xml:id="r3" style="s1" tts:extent="50% 50%" tts:origin="50% 50%"/>
      <region xml:id="r4" tts:extent="50% 50%" tts:origin="50% 0%"/>
    </layout>
  </head>
  <body>
    <div>
      <p region="r4" begin="0s" end="0.2s">ABCDEF</p>
      <p region="r1" begin="0.25s" end="4s"><span style="s1">a</span></p>
      <p region="r2" begin="0.25s" end="4s"><span style="s1">g</span></p>
      <p region="r3" begin="0.25s" end="4s"><span style="s1">m</span></p>
      <p region="r4" begin="0.25s" end="4s"><span style="s1">s</span></p>
    </div>
  </body>
</tt>
